# MultiHawkes

./: .gitignore  CMakeLists.txt  README.md  hawkes.cpp  hawkes.h  hawkes_module.cpp  main.cpp  requirements.txt  test
hawkes-python/: MutliRiskMeasure.ipynb  RiskMeasure.ipynb  hawkes.ipynb  main.py  model.py  plot.py
hawkesPy/: RiskMeasure.ipynb
include/: hawkes.h
module/: hawkes_module.cpp
src/: CMakeLists.txt  hawkes.cpp  hawkes_module.cpp  main.cpp
